Football betting Database 06 exercise

--- a/codeFirst/pom.xml
+++ b/codeFirst/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>WizardDeposit</module>
         <module>FootballDatabase</module>
+        <module>FootballBetting</module>
     </modules>
 
     <properties>
