--- a/codeFirst/pom.xml
+++ b/codeFirst/pom.xml
@@ -14,6 +14,7 @@
         <module>FootballBetting</module>
         <module>SalesDatabase</module>
         <module>University</module>
+        <module>HospitalDB</module>
     </modules>
 
     <properties>
