--- a/SoftWeatherForecast/pom.xml
+++ b/SoftWeatherForecast/pom.xml
@@ -76,6 +76,11 @@
 			<version>1.18.10</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.12.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
